--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>Research</h2>
             <h5>Election Security - Risk-Limiting Audits</h5>
             <p>
-                In 2020, I began working on statistical risk-limiting audits
+                In 2020, I began working on statistical risk-limiting audits (RLAs)
                 which validate election results within rigorous error bounds.
                 I am part of a team led by 
                 <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>, and I 
@@ -46,11 +46,18 @@
                 develop software in our
                 <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit library</a>.
                 The theory consists of beautiful mathematical ideas to
-                accurately measure risk such that smaller sample sizes are sufficient to meet stopping conditions.
+                accurately measure risk such that smaller sample sizes are sufficient to meet 
+                stopping conditions.
                 The implementation requires interesting algorithmic design
                 to make computationally complex tasks feasible.
-                Manuscripts presenting novel audits and related results are 
-                currently being drafted. 
+                Our 
+                <a href="papers/simulations-of-ballot-polling-rlas.pdf">
+                paper presenting simulation results
+                </a> 
+                for the comparison of 
+                existing ballot-polling RLAs will appear in Voting '22, 
+                and additional manuscripts presenting novel audits and 
+                related results are currently being drafted. 
             </p>
             <h5>Scheduling Algorithm - Neural Network Tasks</h5>
             <p>
