--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 paper presenting simulation results
                 </a> 
                 for the comparison of 
-                existing ballot-polling RLAs will appear in Voting '22, 
+                existing ballot-polling RLAs will appear in 
+                <a href="https://fc22.ifca.ai/workshops.html">Voting '22</a>, 
                 and additional manuscripts presenting novel audits and 
                 related results are currently being drafted. 
             </p>
