--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
             <a href="html/snake.html">Snake</a>
             |
             <a href="html/sorting.html">Sorting</a>
+            |
+            <a href="computational_photography/computational_photography.html">Computational Photography</a>
             </p>
         </div>
     </div>
