--- a/computational_photography/computational_photography.html
+++ b/computational_photography/computational_photography.html
@@ -35,7 +35,7 @@
             I'll present some of my work from the course here.
             </p>
             <ul>
-            <li><a href="./projudin-gorskii.html">Aligning and compositing images of the Prokudin-Gorskii photo collection</a>
+            <li><a href="./prokudin-gorskii.html">Aligning and compositing images of the Prokudin-Gorskii photo collection</a>
             </ul>
         </div>
     </div>
