--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -31,6 +31,11 @@
             <p>
             I will publish my work here shortly...
             </p>
+            <p>
+            Here is a sneak peak at an image that my algorithm has successfully aligned:
+            </p>
+            <img src="00458u.jpg" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
+            <img src="00458u_aligned.jpg" alt="My aligned version">
         </div>
     </div>
 </div>
