--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -29,11 +29,19 @@
         <div class="col-xs-12 col-sm-8 col-md-6">
             <h2>Computational Photography</h2>
             <p>
-            I will publish my work here shortly...
+            What follows is an incomplete, in-progress report on my work for this project...
+            </p>
+            <h4>Prokudin-Gorskii</h4>
+            <p>
+            Sergei Milkhailovich Prokudin-Gorskii (1863-1944) was a Russian chemist and photographer, best known for his early methods of color photography.
+            On trips sponsored by Tsar Nicholas II, Prokudin-Gorskii documented, with thousands of images, the Russian empire between the years 1905 and 1915.
+            In 1948, the resulting collection was purchased by the US Library of Congress.
             </p>
             <p>
-            Here is a sneak peak at an image that my algorithm has successfully aligned:
+            Prokudin-Gorskii's method involved capturing three separate negatives, each with a different filter, either red, blue, or green.
+            This set of negatives can be combined to produce a full color image.
             </p>
+            <h4>An aligned image...</h4>
             <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
             <img src="prokudin-gorskii-images/00458u_aligned.jpg" width="500" alt="My aligned version">
         </div>
