--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -33,7 +33,7 @@
             </p>
             <h4>Prokudin-Gorskii</h4>
             <p>
-            Sergei Milkhailovich Prokudin-Gorskii (1863-1944) was a Russian chemist and photographer, best known for his early methods of color photography.
+            Sergei Milkhailovich Prokudin-Gorskii (1863-1944) was a Russian chemist and photographer, best known for his cutting-edge methods of color photography.
             On trips sponsored by Tsar Nicholas II, Prokudin-Gorskii documented, with thousands of images, the Russian empire between the years 1905 and 1915.
             In 1948, the resulting collection was purchased by the US Library of Congress.
             </p>
@@ -41,7 +41,24 @@
             Prokudin-Gorskii's method involved capturing three separate negatives, each with a different filter, either red, blue, or green.
             This set of negatives can be combined to produce a full color image.
             </p>
-            <h4>An aligned image...</h4>
+            <h4>Aligning an Image</h4>
+            <p> 
+            Images can be downloaded from the collection in the following form.
+            </p>
+            <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
+            <p>
+            The three sections correspond to blue, red, and green filters respectively from top to bottom.
+            My task is to align these three color channels. 
+            Simply dividing the image in three equal parts and overlaying them results in a misaligned, fuzzy mess.
+            </p>
+            <img src="prokudin-gorskii-images/no_alignment.jpg" width="100" alt="Fuzzy mess">
+            <p>
+            Clearly, we need to align these channels.
+            </p>
+
+        <!------------------------------------------------>
+
+            <h4>Sneak peak higher resolution image...</h4>
             <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
             <img src="prokudin-gorskii-images/00458u_aligned.jpg" width="500" alt="My aligned version">
         </div>
