--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -26,7 +26,8 @@
 
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-xs-12 col-sm-8 col-md-6">
+        <!-- <div class="col-xs-12 col-sm-8 col-md-6"> -->
+        <div class="col-xs-12 col-sm-10 col-md-10">
             <h4>Aligning and compositing images of the Prokudin-Gorskii photo collection<</h4>
             <p>
             What follows is an incomplete, in-progress report on my work for this project...
