--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -46,7 +46,7 @@
             <p> 
             Images can be downloaded from the collection in the following form.
             </p>
-            <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
+            <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)" class="float-md-right p-2">
             <p>
             The three sections correspond to blue, red, and green filters respectively from top to bottom.
             My task is to align these three color channels. 
