--- a/index.html
+++ b/index.html
@@ -35,47 +35,32 @@
                 I'm also a proud member of
                 <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
-            <h2>Research</h2>
-            <h5>Election Security - Risk-Limiting Audits</h5>
+            <h4>Research</h4>
             <p>
-                In 2020, I began working on statistical risk-limiting audits (RLAs)
+                My research interests are broad; that said, I like thinking mathematically and abstractly, 
+                and I've enjoyed working on projects that have meaningful impact.
+                I have really loved working on research for the last couple of years.
+            </p>
+            <h6>Statistical Election Audits</h6>
+            <p>
+                Since 2020 I've been working on a team led by 
+                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>
+                on statistical risk-limiting audits (RLAs)
                 which validate election results within rigorous error bounds.
-                I am part of a team led by 
-                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>, and I 
-                work on the theoretical parts of the problem and also
-                develop software in our
-                <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit library</a>.
-                The theory consists of beautiful mathematical ideas to
-                accurately measure risk such that smaller sample sizes are sufficient to meet 
-                stopping conditions.
-                The implementation requires interesting algorithmic design
-                to make computationally complex tasks feasible.
-                Our 
-                <a href="papers/simulations-of-ballot-polling-rlas.pdf">
-                paper presenting simulation results
-                </a> 
-                for the comparison of 
-                existing ballot-polling RLAs will appear in 
+                I've enjoyed working on both the theory and implementation, contributing to our
+                <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit software</a>.
+                My first paper will appear shortly in 
                 <a href="https://fc22.ifca.ai/workshops.html">Voting '22</a>, 
                 and additional manuscripts presenting novel audits and 
                 related results are currently being drafted. 
             </p>
-            <h5>Scheduling Algorithm - Neural Network Tasks</h5>
+            <h6>Scheduling</h6>
             <p>
-                Given numerous real-time neural network tasks, meeting 
-                deadlines
-                necessitates a balancing of priority and precision to achieve
-                optimal results. 
-                I am working with 
-                <a href="https://www2.seas.gwu.edu/~narahari/">Professor Bhagi Narahari</a> to develop a
-                scheduling algorithm that models such tasks as imprecise
-                computations.
-                We are designing the scheduling algorithm subject to new
-                user-in-the-loop real-time constraints, and we are 
-                implementing the algorithm to experimentally support
-                theoretical guarantees. 
+                I am working with
+                <a href="https://www2.seas.gwu.edu/~narahari/">Professor Bhagi Narahari</a> 
+                to develop a scheduling algorithm for neural network tasks using an imprecise computation model. 
             </p>
-            <h5>Computer Vision - Traffickcam</h5>
+            <h5>Hotel Recognition</h5>
             <p>
                 Human trafficking cases often have images from hotel rooms
                 as evidence.
