--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
             </p>
             <h4>Research</h4>
             <p>
-                My research interests are broad; that said, I like thinking mathematically and abstractly, 
-                and I've enjoyed working on projects that have meaningful impact.
-                I have really loved working on research for the last couple of years.
+                My research interests are broad; I like thinking mathematically and abstractly, 
+                and I've particularly enjoyed working on projects that have meaningful impact.
             </p>
             <h6>Statistical Election Audits</h6>
             <p>
@@ -53,6 +52,8 @@
                 <a href="https://fc22.ifca.ai/workshops.html">Voting '22</a>, 
                 and additional manuscripts presenting novel audits and 
                 related results are currently being drafted. 
+
+                <a href="papers/simulations-of-ballot-polling-rlas.pdf">[1] Broadrick, O., Morin, S., McClearn, G., McBurnett, N., Vora, P. L., Zag&oacute;rski, F.: Simulations of Ballot Polling Risk-Limiting Audits. In: 7th Workshop on Advances in Secure Electronic Voting (Financial Cryptography 2022)</a>
             </p>
             <h6>Scheduling</h6>
             <p>
