--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 My research interests are broad; I like thinking mathematically and abstractly, 
                 and I've particularly enjoyed working on projects that have meaningful impact.
             </p>
-            <h6>Statistical Election Audits</h6>
+            <h5>Statistical Election Audits</h5>
             <p>
                 Since 2020 I've been working on a team led by 
                 <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>
@@ -56,13 +56,14 @@
                 <br>
                 <a href="papers/simulations-of-ballot-polling-rlas.pdf">[1] Broadrick, O., Morin, S., McClearn, G., McBurnett, N., Vora, P. L., Zag&oacute;rski, F.: Simulations of Ballot Polling Risk-Limiting Audits. In: 7th Workshop on Advances in Secure Electronic Voting (Financial Cryptography 2022)</a>
             </p>
-            <h6>Scheduling</h6>
+            <h5>Scheduling</h5>
             <p>
                 I am working with
                 <a href="https://www2.seas.gwu.edu/~narahari/">Professor Bhagi Narahari</a> 
                 to develop a scheduling algorithm for neural network tasks using an imprecise computation model. 
+                I will report results here.
             </p>
-            <h6>Hotel Recognition</h6>
+            <h5>Hotel Recognition</h5>
             <p>
                 Human trafficking cases often have images from hotel rooms
                 as evidence.
@@ -83,21 +84,28 @@
             <h2>Teaching</h2>
             <p>
                 I love helping folks learn.
-                I am currently an Undergraduate Teaching Assistant
-                in <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/">Discrete Structures II</a>, enjoying leading
-                my own weekly lab section with over twenty students.
-                I've also been a Learning Assistant in 
-                <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I</a> (Spring '20), 
-                <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/Fall_2020_Syllabus.pdf">Discrete Structures II</a> (Fall '20),
-                and <a href="https://gw-cs3313-2021.github.io/">Foundations of Computing</a> (Spring '21).
-                Since high school, I have always tutored as well.
-                I currently tutor college students for the 
-                <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department</a>
-                and high school students for a 
+                <br>
+                I have been tutoring math, physics, and computer science since I was in high school.
+                Since then I have tutored for the
+                <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department,</a>
+                and I currently tutor high school students for a 
                 <a href="https://www.tungstenprep.com/">local Washington, DC
                     company.</a>
                 If you're here for my tutoring, please fill out
                 <a href="https://forms.gle/BVx19VLR3wB9LMr96">this form.</a>
+                <br>
+
+                I have worked as an instructional assistant for the past several semesters, including leading my own lab sections in Fall '21 and Spring '22:
+                <ul>
+                <li>
+                <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/">Discrete Structures II, Fall 2021</a>
+                <li>
+                <a href="https://gw-cs3313-2021.github.io/">Foundations of Computing, Spring 2021</a>
+                <li>
+                <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/Fall_2020_Syllabus.pdf">Discrete Structures II, Fall 2020</a>
+                <li>
+                <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I, Spring 2020</a>
+                </ul>
             </p>
             <hr>
             <div>
