--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 computes descriptors of such key points in the image 
                 and searches for similar points in the database to find matches.
             </p>
-            <h2>Teaching</h2>
+            <h4>Teaching</h4>
             <p>
                 I love helping folks learn.
                 <br>
@@ -98,6 +98,7 @@
                 I have worked as an instructional assistant for the past several semesters, including leading my own lab sections in Fall '21 and Spring '22:
                 <ul>
                 <li>
+                <a href="https://gw-cs3313.github.io/">Foundations of Computing, Spring 2022</a>
                 <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/">Discrete Structures II, Fall 2021</a>
                 <li>
                 <a href="https://gw-cs3313-2021.github.io/">Foundations of Computing, Spring 2021</a>
