--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                 and additional manuscripts presenting novel audits and 
                 related results are currently being drafted. 
 
-                <br>
-                <a href="papers/simulations-of-ballot-polling-rlas.pdf">[1] Broadrick, O., Morin, S., McClearn, G., McBurnett, N., Vora, P. L., Zag&oacute;rski, F.: Simulations of Ballot Polling Risk-Limiting Audits. In: 7th Workshop on Advances in Secure Electronic Voting (Financial Cryptography 2022)</a>
+                <ol>
+                <li>
+                <a href="papers/simulations-of-ballot-polling-rlas.pdf">Broadrick, O., Morin, S., McClearn, G., McBurnett, N., Vora, P. L., Zag&oacute;rski, F.: Simulations of Ballot Polling Risk-Limiting Audits. In: 7th Workshop on Advances in Secure Electronic Voting (Financial Cryptography 2022)</a>
+                </ol>
             </p>
             <h5>Scheduling</h5>
             <p>
