--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </p>
             <h4>Research</h4>
             <p>
-                My research interests are broad; I like thinking mathematically and abstractly, 
+                My research interests are broad and forming; I like thinking mathematically and abstractly, 
                 and I've particularly enjoyed working on projects that have meaningful impact.
             </p>
             <h5>Statistical Election Audits</h5>
