--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -92,6 +92,10 @@
             the image was sufficient for aligning all images given in the assignment.
             At this point, the algorithm can align all the images provided in the assignment in under a minute.
 
+            <h5>Sources</h5>
+            [1] <a href="http://www2.seas.gwu.edu/~pless/computationalPhotography/project1/description.php">Assignment from Professor Pless</a><br>
+            [2] <a href="https://en.wikipedia.org/wiki/Sergey_Prokudin-Gorsky">Wikipedia entry on Prokudin-Gorskii</a>
+
 <!------------------------------------------------------------------------------------------------>
             <h4>Sneak peak higher resolution image...</h4>
             <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
