--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -46,13 +46,13 @@
             <p> 
             Images can be downloaded from the collection in the following form.
             </p>
-            <img src="prokudin-gorskii-images/unmodified.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)" class="float-md-right p-2">
+            <img src="prokudin-gorskii-images/unmodified.png" width="300" alt="Unaligned color channels (from Prokudin-Gorskii collection)" class="float-md-right p-2">
             <p>
             The three sections correspond to blue, red, and green filters respectively from top to bottom.
             My task is to align these three color channels. 
             Simply dividing the image in three equal parts and overlaying them results in a misaligned, fuzzy mess.
             </p>
-            <img src="prokudin-gorskii-images/unaligned.jpg" width="300" alt="Fuzzy mess">
+            <img src="prokudin-gorskii-images/unaligned.png" width="300" alt="Fuzzy, unaligned mess">
             <p>
             Clearly, we need to align these channels. 
             We'll search for the correct allignment by leaving the blue channel alone and trying to match the red and green channels on top of it.
