img png not jpg!

--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -74,7 +74,7 @@
             Here's what happens when we try all translations of distance at most 5% of the image's longer side.
             The metric described above is minimized by the following alignment.
             </p>
-            <img src="prokudin-gorskii-images/aligned.jpg" width="400" alt="Aligned">
+            <img src="prokudin-gorskii-images/aligned.png" width="400" alt="Aligned">
 
             <h4>Speeding up the algorithm</h4>
             As described so far, this alignment algorithm is quite slow even for small images (~300px).
