--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -96,6 +96,10 @@
             This last observation really depends on the images having sufficient information throughout the image (or at least in the sampled patch).
             I found that taking just the middle 20% of
             the image was sufficient for aligning all images given in this assignment.
+            Here's the corresponding function in Python.
+
+            <script src="https://gist.github.com/obroadrick/40dc78aab7efbf3e9e3be8d7a59a683c.js"></script>
+
             At this point, the algorithm can align all the images in the assignment dataset in under a minute.
             Here's a montage of some of my favorites! 
 
