--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -105,6 +105,12 @@
             <script src="https://gist.github.com/obroadrick/40dc78aab7efbf3e9e3be8d7a59a683c.js"></script>
             <p>
             At this point, the algorithm can align all the images in the assignment dataset in under a minute.
+            It is interesting to think about what the "best" alignment really is. What metric is best?
+            One can imagine the images being taken on a half pixel offset from each other such that there are two, equally correct
+            alignments. Images like the one shown made me wonder whether the best alignment could ever be agreed on.
+            As you can see, a difference in one pixel, on one channel, for a sufficiently high resolution image gives 
+            very similar results.
+            <img src="prokudin-gorskii-images/close.png" width="600" alt="Similar but different alignments">
             Here's a montage of some of my favorites! 
             </p>
             <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
