--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -113,10 +113,23 @@
             </p>
             <img src="prokudin-gorskii-images/close.png" width="600" alt="Similar but different alignments">
             <p>
-            Here's a montage of some of my favorites! 
+            That said, I am happy with my metric, and with any tweaking that I do by hand, I can't seem to get any more satisfied by an alignment
+            than I do with the algorithm's alignment.
+            I do look forward to seeing classmate's alignment metrics.
+            With the alignment algorithm totally working (quickly), I can now show some of my favorite among the newly aligned images.
             </p>
+            <p>
             <img src="prokudin-gorskii-images/00458u.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
             <img src="prokudin-gorskii-images/00458u_aligned.jpg" width="500" alt="My aligned version">
+            </p>
+            <p>
+            <img src="prokudin-gorskii-images/01861a.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
+            <img src="prokudin-gorskii-images/01861a_aligned.jpg" width="500" alt="My aligned version">
+            </p>
+             <p>
+            <img src="prokudin-gorskii-images/31421v.jpg" width="100" alt="Unaligned color channels (from Prokudin-Gorskii collection)">
+            <img src="prokudin-gorskii-images/31421v_aligned.jpg" width="500" alt="My aligned version">
+            </p>
             <h5>Sources</h5>
             <p>
             [1] <a href="http://www2.seas.gwu.edu/~pless/computationalPhotography/project1/description.php">Assignment from Professor Pless</a><br>
