--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -146,7 +146,8 @@
             <img src="prokudin-gorskii-images/remove_rolled_bit.png" width="500" alt="remove artifact of numpy roll">
             </p>
             <p>
-            This gives, for a couple of the images, a nice way to make the colors pop a bit more.
+            I enjoyed this project. It is rewarding to see the images improve as you work, and it was fun to experiment with various alignment metrics.
+            These are some pretty interesting historic images, and it was great to produce my own version of them.
             </p>
             <h5>Sources</h5>
             <p>
