--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -142,6 +142,7 @@
             That is, I kept as much of the correctly aligned image as possible, which importantly does leave some funny looking
             edges from the glass panes still. I like them - quite a bit.
             </p>
+            <script src="https://gist.github.com/obroadrick/03d5be7f36bb9d3526e1f2671648a211.js"></script>
             <p>
             <img src="prokudin-gorskii-images/remove_rolled_bit.png" width="500" alt="remove artifact of numpy roll">
             </p>
